--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,7 +7,7 @@ function switchLanguage(select) {
 </script>
 <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
     <div class="mdl-layout__header-row portfolio-logo-row">
-        <span class="mdl-layout__title"><div class="portfolio-logo"></div></span>
+<!--        <span class="mdl-layout__title"><div class="portfolio-logo"></div></span>-->
     </div>
     <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
 
