--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -20,7 +20,7 @@
                 </div>
 
                 <div class="mdl-grid portfolio-copy">
-                    <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Introduction</h3>
+                    <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">...</h3>
                     <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
                         <p th:text="#{text.about}">
 
@@ -28,7 +28,7 @@
                     </div>
 
 
-                    <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Irure mollit est sit labore</h3>
+                    <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">...</h3>
 
                     <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
                         <p th:text="#{text2.about}">
