Text Struktur angepasst

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -29,14 +29,13 @@
 						<strong>&copy;opyright</strong>
 						<div itemscope itemtype="http://schema.org/ScholarlyArticle">
 							<address class="mdl-card__supporting-text no-padding">
-								<a href="http://artingo.net" target="_blank">artingo.net</a><br/>
-								<span itemprop="author">Alfred Walther</span><br/>
-								Elisabethenstr. 19<br/>
-								D-61239 Ober-Mörlen, Germany
+								<a href="https://onlyfans.com/misterspermanent" target="_blank">Miko Spermanent</a><br/>
+								<span itemprop="author">The Spermanent INK.</span><br/>
+
 							</address>
 							<p></p>
-							<p>Em@il: <a href="mailTo://office@artingo.net">office@artingo.net</a><br/>
-								Skype: <a href="skype:artingo.net?chat">artingo.net</a>
+							<p>Em@il: <a href="mailTo://misterspermanent@gmail.com">misterspermanent@gmail.com</a><br/>
+
 							</p>
 						</div>
 					</div>
