--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="/css/material.grey-pink.min.css"/>
 </head>
 <body style="background: url('/404-error-page.jpg') no-repeat 50% -40%">
-<h1 align="center">Du hast das Internet kaputt gemacht!</h1>
+<h1 align="center">Versuch es nochmal</h1>
 <p align="center" style="width:100%; position:relative; top:100px">
     <a href="/app/index.html" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent"
        data-upgraded=",MaterialButton,MaterialRipple">
